<resources>
    <string name="app_name">AyoBerbagi</string>
    <string name="create_account"><font color="#00ff00">text</font></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="back_to_login">Kembali Ke Login</string>
    <string name="todo">Invalid username or password</string>

    <string name="upload_bukti">Upload Bukti Transfer</string>

    <!--    <string name="invalid"> Invalid username or password </string>-->

    <string name="title_home">Home</string>
    <string name="title_proses">Proses</string>
    <string name="title_history">Riwayat</string>
    <string name="title_account">Profile</string>
    <string name="title_berita">Berita</string>

    <string name="donasi_barang"> Untuk donasi barang, dapat menekan link berikut. </string>>

    <string name="notifikasi">Anda telah melakukan donasi, silahkan lanjutkan ke proses pembayaran</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_berita">Berita</string>
    <string name="permission_read_external_storage" />
    <string name="invalid">Invalid username or password</string>

    <string name="title_activity_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="desk_pertanyaan">Pertanyaan keamanan diperlukan apabila terjadi lupa password</string>
    <string name="konfirmasi1">Foto KTP Anda akan membantu kami dalam memvalidasi data diri.</string>
    <string name="konfirmasi2">Apa yang harus dilakukan untuk konfirmasi data diri?</string>
    <string name="cara1">\u2022 Foto KTP Anda dan pastikan data diri terlihat jelas.</string>
    <string name="cara2">\u2022 Lakukan selfie dengan memegang KTP Anda.</string>
    <string name="cara3">\u2022 Pastikan KTP berada di sebelah wajah Anda.</string>

    <string-array name="donasiBarang">
        <item>Pakaian</item>
        <item>Selimut</item>
        <item>Buku</item>
        <item>Sembako</item>
        <item>Makanan / Minuman</item>
        <item>Peralatan Medis / Obat-obatan</item>
        <item>Mainan</item>
        <item>Peralatan Rumah Tangga</item>
    </string-array>

    <string-array name="tipeDonatur">
        <item>Perorangan</item>
        <item>Kelompok</item>
        <item>Perusahaan</item>
    </string-array>

    <string-array name="bank">
        <item>BANK BRI</item>
        <item>BANK Mandiri</item>
        <item>BANK BCA</item>
        <item>BANK BNI</item>
    </string-array>

    <string-array name="pertanyaan">
        <item>Siapa nama guru pertama Anda?</item>
        <item>Siapa nama ibu kandung Anda?</item>
        <item>Dimana tempat  lahir ayah Anda?</item>
        <item>Dimana tempat  lahir ibu Anda?</item>
        <item>Siapa nama depan sahabat pertama Anda?</item>
        <item>Siapa nama hewan peliharaan pertama Anda?</item>
        <item>Siapa nama panggilan adik bungsu Anda?</item>
        <item>Siapa nama panggilan kakak pertama Anda?</item>
        <item>Siapa nama panggilan sepupu tertua Anda?</item>
        <item>Dimana Anda bertemu pasangan Anda?</item>

    </string-array>


</resources>